feat: add shapes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
   <canvas id="canvas" class="canvas" width="300" height="300"></canvas>
+  <canvas id="canvasArc" class="canvas" width="300" height="300"></canvas>
+  <canvas id="canvasCurves" class="canvas" width="300" height="300"></canvas>
+  <canvas id="canvasCombinations" class="canvas" width="300" height="300"></canvas>
+  <canvas id="canvasPath" class="canvas" width="300" height="300"></canvas>
 
   <script src="script.js"></script>
 </body>
