feat: add main content, styles for canvas animation as background

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-  <canvas id="canvas" class="canvas" width="300" height="300"></canvas>
+  <canvas id="canvas" class="canvas"></canvas>
+  <div class="content">
+    <h1>Use this canvas animation like background</h1>
+  </div>
 
   <script src="script.js"></script>
 </body>
